improve receipt style: diagnose invisible border issue

--- a/public/receipt.css
+++ b/public/receipt.css
@@ -305,7 +305,7 @@ button.view1button {
 	text-align: center;
 	letter-spacing: .1em;
 	display: inline-block;
-	width: 50%;
+	width: 49.7%;
 	background-color: lightgrey;
 	height: 100%;
 	line-height: 70px;
